--- a/estilo.css
+++ b/estilo.css
@@ -1,10 +1,9 @@
 body
 {
 	margin: 0px;
-	background: #283c86;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, #45a247, #283c86);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right, #45a247, #283c86); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+	background-color: white;
+	font-family: 'Poppins', sans-serif;
+	
 	
 }
 /*-----------Header--------*/
@@ -12,7 +11,19 @@ header
 {
 	width: 100%;
 	height: 100px;
-
+}
+header>p
+{
+	float: left;
+	margin-left: 8%;
+	font-size: 30px;
+}
+header>strong
+{
+	float: left;
+	margin-left:;
+	margin-top: 30px;
+	font-size: 30px;
 }
 nav
 {
@@ -21,17 +32,24 @@ nav
 	height: 100%;
 	float: right;
 
-
 }
 button
 {
-	margin-top: 3%;
+	margin-top: 2%;
 	margin-left: 15%;
-	width: 120px;
+	width: 130px;
 	height: 50px;
-	background-color: transparent;
-	border: none;
-	border-bottom: 1px solid white;
+	background-color:transparent;
+	color: #01A9DB;
+	border:none;
+	font-size: 160%;
+	border-radius: 5px;
+}
+
+button:hover
+{
+	background-color:rgba(0,0,0,0.05);
+	transition: 0.5s;
 }
 /*-------------------------------*/
 
@@ -41,16 +59,33 @@ section
 {
 	width: 100%;
 	margin-top: 10px;
+	border-radius: 5px;
 
 }
 
 .main-section
 {
 	width: 90%;
-	height: 500px;
+	height: 700px;
 	margin-left: 5%;
-	background-color:rgba(0,0,0,0.06);  
+	background-color:rgba(0,0,0,0.05);  
+	border-radius: 3px;
 	
+}
+.perfil-photo
+{
+	width:300px;
+	margin-top: 5%;
+	margin-left: 10%;
+}
+.info
+{
+	float: right;
+	margin-top: 130px;
+	margin-right: 10%;
+	color: black;
+	font-size: 200%;
+	border-bottom: 1px solid black;
 }
 
 
@@ -58,16 +93,48 @@ section
 .second-section
 {
 	width: 90%;
-	height: 300px;
+	height: 200px;
 	margin-bottom: 10px;
 	margin-left: 5%;
-	background-color:rgba(0,0,0,0.06); 
+	background-color:rgba(0,0,0,0.05); 
+	border-radius: 5px;
+	padding-top: 20px;
 }
+section>div>div>p
+{
+	text-align: center;
+	font-size: 140%;
+}
+
 
 
 footer
 {
 	width: 100%;
-	height: 60px;
-	background-color:rgba(0,0,0,0.06); 
+	height: 100px;
+	background-color:rgba(0,0,0,0.05);
 }
+
+footer>div>p
+{
+	margin: 0px;
+	font-size: 150%;
+
+}
+.pie
+{
+	
+	text-align: center;
+	padding-top: 10px;
+
+}
+footer>div>img
+{
+	width: 2%;
+	margin-left: 25px;
+}
+
+display inline block;
+
+
+
