--- a/estilo.css
+++ b/estilo.css
@@ -70,13 +70,15 @@ section
 	margin-left: 5%;
 	background-color:rgba(0,0,0,0.05);  
 	border-radius: 3px;
+	margin-bottom: 55px;
 	
 }
 .perfil-photo
 {
-	width:300px;
-	margin-top: 5%;
+	width:400px;
+	margin-top: 8%;
 	margin-left: 10%;
+	border-radius: 200px;
 }
 .info
 {
@@ -87,32 +89,20 @@ section
 	font-size: 200%;
 	border-bottom: 1px solid black;
 }
+section>div>div>p
+{
+	font-size: 20px;
+	text-align: justify;
+}
 
 
 /*-----------Second-Section--------*/
-.second-section
-{
-	width: 90%;
-	height: 200px;
-	margin-bottom: 10px;
-	margin-left: 5%;
-	background-color:rgba(0,0,0,0.05); 
-	border-radius: 5px;
-	padding-top: 20px;
-}
-section>div>div>p
-{
-	text-align: center;
-	font-size: 140%;
-}
-
-
-
 footer
 {
 	width: 100%;
-	height: 100px;
+	height: 130px;
 	background-color:rgba(0,0,0,0.05);
+	margin:0px;
 }
 
 footer>div>p
@@ -125,13 +115,14 @@ footer>div>p
 {
 	
 	text-align: center;
-	padding-top: 10px;
+	padding-top: 20px;
 
 }
 footer>div>img
 {
 	width: 2%;
 	margin-left: 25px;
+	background-color: 
 }
 
 display inline block;
