--- a/estilo.css
+++ b/estilo.css
@@ -91,10 +91,13 @@ section
 }
 section>div>div>p
 {
-	font-size: 20px;
+	font-size: 22px;
 	text-align: justify;
 }
-
+section>div>div>p>strong
+{
+	color: #01A9DB;
+}
 
 /*-----------Second-Section--------*/
 footer
@@ -118,11 +121,15 @@ footer>div>p
 	padding-top: 20px;
 
 }
-footer>div>img
+footer>div>a>img
 {
 	width: 2%;
-	margin-left: 25px;
-	background-color: 
+	margin-left: 70px;
+	font-size: 10px;
+}
+a
+{
+	text-decoration: none;
 }
 
 display inline block;
