--- a/estilo.css
+++ b/estilo.css
@@ -1,10 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins');
 body
 {
 	margin: 0px;
 	background-color: white;
 	font-family: 'Poppins', sans-serif;
-	
-	
 }
 /*-----------Header--------*/
 header
@@ -48,7 +47,7 @@ button
 
 button:hover
 {
-	background-color:rgba(0,0,0,0.05);
+	background-color:rgba(0,153,255,0.2);
 	transition: 0.5s;
 }
 /*-------------------------------*/
@@ -68,26 +67,26 @@ section
 	width: 90%;
 	height: 700px;
 	margin-left: 5%;
-	background-color:rgba(0,0,0,0.05);  
+	background-color:rgba(0,153,255,0.05);
 	border-radius: 3px;
-	margin-bottom: 55px;
+	margin-bottom: 45px;
 	
 }
 .perfil-photo
 {
 	width:400px;
 	margin-top: 8%;
-	margin-left: 10%;
+	margin-left: 8%;
 	border-radius: 200px;
 }
 .info
 {
 	float: right;
 	margin-top: 130px;
-	margin-right: 10%;
 	color: black;
 	font-size: 200%;
 	border-bottom: 1px solid black;
+	margin-right: 30px;
 }
 section>div>div>p
 {
@@ -104,7 +103,7 @@ footer
 {
 	width: 100%;
 	height: 130px;
-	background-color:rgba(0,0,0,0.05);
+	background-color:rgba(0,153,255,0.05);
 	margin:0px;
 }
 
@@ -126,6 +125,7 @@ footer>div>a>img
 	width: 2%;
 	margin-left: 70px;
 	font-size: 10px;
+	margin-top: 5px;
 }
 a
 {
