--- a/contact.css
+++ b/contact.css
@@ -58,21 +58,69 @@ header>img
 
 .principal
 {
-	width: 90%;
-	height: 700px;
-	margin-left: 5%;
-	margin-right: 5%;
+	width: 50%;
+	height: 565px;
+	margin-left: 25%;
 	background-color:rgba(0,153,255,0.2);
 	border-radius: 5px;
+	margin-bottom: 5%;
+	margin-top: 2%;
+	padding-top: 10px;
+
 }
 
 .formulario
 {
-	width: 50%;
-	height: 90%;
+	width: 80%;
+	height: 80%;
 	margin-top: 3%;
-	margin-left: 25%;
-	border: 1px solid black;
+	margin-left: 5%;
+}
+
+.input
+{
+	width: 100%;
+	height: 50px;
+	border-radius: 5px;
+	margin-top:;
+	border:none;
+	padding-left: 10px; 
+}
+textarea
+{
+	width: 100%;
+	height: 150px;
+	border-radius: 5px;
+	margin-top:;
+	border:none;
+}
+h2
+{
+	text-align: center;
+	margin-top: 10px;
+}
+label
+{
+	font-size: 20px;
+}
+
+.enviar
+{
+	margin-top: 2%;
+	margin-left: 40%;
+	width: 120px;
+	height: 50px;
+	background-color:rgba(0,153,255,0.2);
+	color: #01A9DB;
+	border:none;
+	font-size: 130%;
+	border-radius: 5px;
+}
+
+.enviar:hover
+{
+	color: white;
+	transition: 1s;
 }
 
 
